tests/type_errors/length_on_int.nos
# expect_error: expected List, String, Tuple, or Array
# length() only works on collections, not primitive types
main() = length(42)
